--- a/templates/index.html
+++ b/templates/index.html
@@ -251,7 +251,7 @@
                 
                 statusBar.textContent = 'Status: Fetching image...';
                 
-                fetch('gif-maker-xhzm.vercel.app/fetch-image', {
+                fetch('https://gif-maker-xhzm.vercel.app/fetch-image', {
                     method: 'POST',
                     headers: {
                         'Content-Type': 'application/json',
